# product-page

./: Cargo.toml  index.html
src/: main.rs
src/components/: flower_card.rs  header.rs  mod.rs
src/models/: product.rs
