[package]
name = "product-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4"